@@ -1,3 +1,8 @@
+2002-09-25  Havoc Pennington  <hp@redhat.com>
+
+	* src/metacity.schemas.in: Change short desc of switch_windows and
+	cycle_windows to be different
+
 2002-09-24  Havoc Pennington  <hp@pobox.com>
 
 	* src/place.c (fit_rect_in_xinerama): update best_overlap as we go
